Spent some time looking into how to do item system
- Create classes for each type of item that can be changed. So class Chaingun, but multiple instances of that chaingun may exist.
- Using addressables we can assign prefabs to objects through code. Easy peasey. We can also do this with Icons as well.
- Need to figure out how to handle creating items as well. might create a global item database with factories for each item (probably).

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.19.19",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.entities": "0.51.0-preview.32",
     "com.unity.ide.rider": "3.0.15",
