Developed item converter for converting json data to items in code

--- a/Assets/Resources/JSON/Items/Active Modules/RocketLaunchers.json
+++ b/Assets/Resources/JSON/Items/Active Modules/RocketLaunchers.json
@@ -1,6 +1,8 @@
 {
+    "linking_key": "rocket_launcher",
     "data": [
         {
+            "key": "rocket_annihilator",
             "name": "Rocket Annihilator",
             "weight": {
                 "min": 250,
@@ -26,6 +28,7 @@
             ]
         },
         {
+            "key": "tripod_launcher",
             "name": "Tri-Pod Launcher",
             "weight": {
                 "min": 350,
